# 3A_genie_logiciel

./: .gitignore  .releaserc  CMakeLists.txt  Dockerfile  README.md  do_tests.bat  hello.cpp
.github/workflows/: cmake-multi-platform.yml  first_C.yml  first_CD  first_CD.yml  first_CDD.yml  first_CI
cmake/: HelloProjConfig.cmake.in  HelloProjConfig.h.in
include/basic/: message.h
mains/: CMakeLists.txt  hello.cpp
src/basic/: CMakeLists.txt  message.cpp
tests/: CMakeLists.txt  test-hello.cpp  test-version.cpp
